// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzozJi nsEvm"
>
  <li
    className="sc-Axmtr IpCJl"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-Axmtr IpCJl"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-Axmtr IpCJl"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzozJi nsEvm"
>
  <li
    className="sc-Axmtr sc-AxmLO jHoFgL"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-Axmtr sc-AxmLO jHoFgL"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-Axmtr sc-AxmLO jHoFgL"
  >
    <span
      className="sc-AxhCb kcIJRg"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
